<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sprocket</string>

    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="bookmarks">Bookmarks</string>

    <string name="menu_media_route">Play on…</string>
    <string name="menu_licenses">Open source licenses</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="hint_username">Plex Username</string>
    <string name="hint_password">Plex Password</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Minimum 8 characters</string>
    <string name="sign_in_failed">Sign in failed</string>

    <string name="action_queue_track">Queue</string>
    <string name="action_change_speed">Change Playback Speed</string>

    <string name="description_logo">Sprocket logo</string>
    <string name="description_queue">Show playing queue</string>
    <string name="description_speed">Change now playing speed</string>
    <string name="description_track">Show album cover</string>
    <string name="description_skip_forward">Skip forward</string>
    <string name="description_previous">Previous track</string>
    <string name="description_play">Play</string>
    <string name="description_pause">Pause</string>
    <string name="description_next">Next track</string>
    <string name="description_skip_back">Skip Back</string>

    <string name="label_previous">Previous</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_next">Next</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="stop_casting">Stop Casting</string>

    <string name="notification_channel">Sprocket_chanel_id</string>
    <string name="notification_channel_description">Channel ID for Sprocket</string>
    <string name="now_playing_speed_text">Current Speed:</string>

    <string name="chapter_title">Chapter %d</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mark_finshed">Mark item as finished?</string>
    <string name="mark_unstarted">Mark item as unstarted?</string>

    <string name="dot_spacer">%s • %s</string>
    <string name="self_destruct">Login</string>
    <string name="_2_5x">2.5</string>
    <string name="_5x">.5</string>
    <string name="_1_0">1.0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mark_as_seen_unseen">Mark as seen/unseen</string>
    <string name="download_chapter">Download chapter</string>

</resources>
